--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@
     overflow: hidden;
     border: 1px solid #cccccc;
     background-color: #F1F1F1;
+    display: block;
+    float: left;
+    width: 100px;
 }
 
 .tab button{
@@ -10,6 +13,7 @@
     border: none;
     outline: none;
     cursor: pointer;
+    width: 100px;
     padding: 14px 16px;
     transition: 0.3s
 }
@@ -27,4 +31,18 @@
     padding: 6px 12px;
     border:  1px solid #cccccc;
     border-top: none; 
+}
+.form{
+    
+     margin: 0px 0px 0px 110px;
+     line-height: 180%;
+     word-spacing: 5px;
+     
+} 
+.table{
+    margin: 0px 0px 0px 110px;
+}
+.table th {
+   padding-right: 50px;
+   
 }
